// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No Expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={499}
      createdAt={0}
      description="Pens"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={1199}
      createdAt={345600000}
      description="Notebooks"
      id="2"
      key="2"
      note="for photo biz"
    />
    <ExpenseListItem
      amount={11900}
      createdAt={-345600000}
      description="Bags"
      id="3"
      key="3"
      note="new camera bag"
    />
  </div>
</div>
`;
